linotp (3.4~dev0-1) UNRELEASED; urgency=low

  * dummy changelog entry for 3.4

 -- LinOTP Packaging <packaging@linotp.de>  Mon, 08 Apr 2024 10:00:00 +0200

linotp (3.3~rc0-1) UNRELEASED; urgency=low

  Features:
  * new API endpoints to retrieve tokens:
    * /api/v2/tokens
      * accepts query parameters `userId` and`resolverName` to filter Tokens by
      * accepts query parameter `searchTerm` to filter all other columns
    * /api/v2/tokens/<serial>
  * new API endpoint to retrieve realms:
    * /api/v2/realms
  * new API endpoint to retrieve users of a realm:
    * /api/v2/realms/<realm_name>/users
      * accepts any field of a user as query parameter to filter by
      * accepts query parameter `searchTerm` to filter users where one field matches the given value
  * new API endpoint to retrieve resolvers:
    * /api/v2/resolvers
  * new API endpoint to retrieve users of a resolver:
    * /api/v2/resolvers/<resolver_name>/users
      * accepts any field of a user as query parameter to filter by
      * accepts query parameter `searchTerm` to filter users where one field matches the given value
      * sortable by fields
  * new API endpoint to retrieve AuditLog:
    * /api/v2/auditlog
      * accepts most fields of an AuditEntry as query parameter to filter by
  * new API endpoint to retrieve all currently reported token statuses:
    * /system/getReportedStatuses
      * accepts query parameter `realms` to filter by realms.
        Use `realms=*` to get all realms including `/:no realm:/`.
  * new API endpoint to retrieve context information for manage ui (similar to /userservice/context)
    * /manage/context
  * the new API endpoints all return dates in ISO 8601-compliant format
  * limit info-box height in manage-ui. Notifications are scrollable, if combined size exceeds newly limited height.
  * the manage ui login will no longer use refresh and reloads