@@ -1,6 +1,8 @@
 linotp (3.4~dev0-1) UNRELEASED; urgency=low
 
-  * dummy changelog entry for 3.4
+  Fix:
+  * wrongly aligned resize bar on Manage UI flexigrid tables when browser is zoomed or scaled
+
 
  -- LinOTP Packaging <packaging@linotp.de>  Mon, 08 Apr 2024 10:00:00 +0200
 
